--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Django==1.11
-requests==2.7.0
-feedparser==5.2.1
-html5lib==0.999999999
-lxml==3.8.0
+requests==2.18.4
+html5lib==1.0.1
+lxml==4.2.1
 beautifulsoup4==4.6.0
